--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "@datx/core": "2.3.1",
     "@datx/jsonapi": "2.3.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "memoize-one": "6.0.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.0",
