--- a/.eslintrc
+++ b/.eslintrc
@@ -10,6 +10,17 @@
     "@typescript-eslint/ban-ts-comment": 1,
     "@typescript-eslint/ban-types": 1,
     "@typescript-eslint/interface-name-prefix": 0,
-    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
+    "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
+    "@typescript-eslint/explicit-member-accessibility": 1,
+    "no-underscore-dangle": 1
+  },
+  "parserOptions": {
+    "project": [
+      "./packages/datx/tsconfig.json",
+      "./packages/datx-jsonapi/tsconfig.json",
+      "./packages/datx-jsonapi-angular/tsconfig.json",
+      "./packages/datx-network/tsconfig.json",
+      "./packages/datx-utils/tsconfig.json"
+    ]
   }
 }
