--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -50,7 +50,7 @@
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
-    "swr": "^1.0.1",
+    "swr": "^1.1.0",
     "ts-jest": "^27.0.3",
     "tslib": "^2.3.0",
     "typescript": "^4.1.3",
@@ -58,7 +58,7 @@
   },
   "peerDependencies": {
     "react": ">=16",
-    "swr": "1.x"
+    "swr": "^1.1.0"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
