--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -1,6 +1,27 @@
 {
   "name": "@datx/jsonapi-angular",
   "version": "2.3.1",
+  "description": "DatX mixin for Angular JSON API support",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "typings": "dist/index.d.ts",
+  "sideEffects": false,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/infinum/datx.git"
+  },
+  "bugs": {
+    "url": "https://github.com/infinum/datx/issues"
+  },
+  "homepage": "https://github.com/infinum/datx#readme",
+  "author": "Infinum JavaScript Team <hello@infinum.com>",
+  "license": "MIT",
+  "keywords": [
+    "datx",
+    "mobx",
+    "jsonapi",
+    "angular"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,29 +30,37 @@
     "watch": "ng build --watch --configuration development",
     "test": "jest"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.0",
-    "@angular/common": "~12.2.0",
-    "@angular/compiler": "~12.2.0",
-    "@angular/core": "~12.2.0",
-    "@angular/forms": "~12.2.0",
-    "@angular/platform-browser": "~12.2.0",
-    "@angular/platform-browser-dynamic": "~12.2.0",
-    "@angular/router": "~12.2.0",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "@datx/core": "2.3.1",
+    "@datx/jsonapi": "2.3.1",
+    "@datx/network": "2.3.1",
+    "@datx/utils": "2.3.1"
+  },
+  "peerDependencies": {
+    "@angular/common": "*",
+    "@angular/core": "*",
+    "rxjs": "6 || 7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.13",
+    "@angular/animations": "~12.2.0",
     "@angular/cli": "~12.2.13",
+    "@angular/common": "~12.2.0",
     "@angular/compiler-cli": "~12.2.0",
+    "@angular/compiler": "~12.2.0",
+    "@angular/core": "~12.2.0",
+    "@angular/forms": "~12.2.0",
+    "@angular/platform-browser-dynamic": "~12.2.0",
+    "@angular/platform-browser": "~12.2.0",
+    "@angular/router": "~12.2.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^12.11.1",
-    "jest": "^27.3.1",
     "jest-preset-angular": "^11.0.1",
+    "jest": "^27.3.1",
     "ng-packagr": "^12.1.1",
-    "typescript": "~4.3.5"
+    "rxjs": "~6.6.0",
+    "tslib": "^2.3.0",
+    "typescript": "~4.3.5",
+    "zone.js": "~0.11.4"
   }
 }
