--- a/packages/datx-jsonapi-angular/tsconfig.json
+++ b/packages/datx-jsonapi-angular/tsconfig.json
@@ -26,7 +26,9 @@
     "module": "esnext",
     "noImplicitAny": false,
     "noUnusedParameters": true,
-    "strictFunctionTypes": false
+    "strictFunctionTypes": false,
+    "noUnusedLocals": true,
+    "resolveJsonModule": true
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
