--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -42,46 +42,25 @@
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
+    "@swc-node/jest": "1.4.1",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
     "@types/jest": "^27.0.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^16.0.0",
     "@types/uuid": "^8.3.0",
     "jest": "^27.0.5",
+    "msw": "0.36.1",
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
     "swr": "^1.1.0",
-    "ts-jest": "^27.0.3",
     "tslib": "^2.3.0",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "react": ">=16",
+    "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
     "swr": "^1.1.0"
-  },
-  "jest": {
-    "coveragePathIgnorePatterns": [
-      "/test/",
-      "/node_modules/"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "testEnvironment": "jsdom",
-    "testRegex": "test/(.*).test.ts$",
-    "globals": {
-      "ts-jest": {
-        "diagnostics": {
-          "warnOnly": true
-        }
-      }
-    },
-    "preset": "ts-jest",
-    "testMatch": null,
-    "setupFilesAfterEnv": [
-      "./test/setup.ts"
-    ]
   }
 }
