--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,6 +27,7 @@
   ],
   "scripts": {
     "test": "jest --coverage",
+    "test:dev": "jest",
     "test:watch": "jest --watch --coverage",
     "prepublish": "npm run build",
     "build": "rollup --config",
@@ -45,12 +46,16 @@
     "@swc-node/jest": "1.4.1",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
+    "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^27.0.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^16.0.0",
     "@types/uuid": "^8.3.0",
+    "isomorphic-fetch": "3.0.0",
     "jest": "^27.0.5",
     "msw": "0.36.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
