--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -46,6 +46,7 @@
     "@swc-node/jest": "1.4.1",
     "@testing-library/jest-dom": "5.16.1",
     "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^27.0.0",
     "@types/lodash": "^4.14.168",
