--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -46,8 +46,8 @@
     "rollup-plugin-terser": "^7.0.2",
     "rxjs": "^6.0.0",
     "ts-jest": "^27.0.3",
-    "tslib": "2.3.0",
-    "typescript": "4.2.3",
+    "tslib": "~2.3.0",
+    "typescript": "~4.2.3",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
