--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@datx/react",
+  "name": "@datx/swr",
   "version": "0.0.1",
-  "description": "DatX hooks for your React Applications",
+  "description": "DatX bindings for SWR",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
@@ -34,8 +34,8 @@
     "watch": "rollup --config --watch"
   },
   "dependencies": {
-    "@datx/core": "2.3.1",
-    "@datx/jsonapi": "2.3.1",
+    "@datx/core": "^2.3.2",
+    "@datx/jsonapi": "^2.3.2",
     "lodash": "^4.17.21",
     "memoize-one": "6.0.0"
   },
