--- a/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/projects/datx-jsonapi-angular/package.json
@@ -2,8 +2,8 @@
   "name": "@datx/jsonapi-angular",
   "version": "2.3.1",
   "peerDependencies": {
-    "@angular/common": "^12.2.0",
-    "@angular/core": "^12.2.0",
+    "@angular/common": ">=12.2.0",
+    "@angular/core": ">=12.2.0",
     "@datx/core": "^2.3.1",
     "@datx/jsonapi": "^2.3.1",
     "@datx/utils": "^2.3.1"
