--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -25,8 +25,8 @@
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "ts-jest": "^27.0.3",
-    "tslib": "^2.3.0",
-    "typescript": "^4.1.3"
+    "tslib": "~2.3.0",
+    "typescript": "~4.2.3"
   },
   "scripts": {
     "test": "jest --coverage",
