--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -2,9 +2,12 @@
   "name": "@datx/jsonapi-angular",
   "version": "2.4.0",
   "description": "DatX mixin for Angular JSON API support",
-  "main": "dist/index.cjs.js",
-  "module": "dist/index.esm.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/bundles/datx-jsonapi-angular.umd.js",
+  "module": "dist/fesm2015/datx-jsonapi-angular.js",
+  "es2015": "dist/fesm2015/datx-jsonapi-angular.js",
+  "esm2015": "dist/esm2015/datx-jsonapi-angular.js",
+  "fesm2015": "dist/fesm2015/datx-jsonapi-angular.js",
+  "typings": "dist/datx-jsonapi-angular.d.ts",
   "sideEffects": false,
   "repository": {
     "type": "git",
@@ -24,21 +27,19 @@
   ],
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build datx-jsonapi-angular && npm run copy-license",
-    "copy-license": "cp ./LICENSE ./dist/LICENSE",
-    "watch": "ng build --watch --configuration development",
+    "build": "ng build datx-jsonapi-angular",
     "test": "jest"
   },
   "dependencies": {
-    "@datx/core": "2.3.1",
-    "@datx/jsonapi": "2.3.1",
-    "@datx/network": "2.3.1",
-    "@datx/utils": "2.3.1"
+    "@datx/core": "2.4.0",
+    "@datx/jsonapi": "2.4.0",
+    "@datx/network": "2.4.0",
+    "@datx/utils": "2.4.0",
+    "tslib": "^2.3.0"
   },
   "peerDependencies": {
-    "@angular/common": "*",
-    "@angular/core": "*",
+    "@angular/common": ">=12",
+    "@angular/core": ">=12",
     "rxjs": "6 || 7"
   },
   "devDependencies": {
@@ -59,7 +60,6 @@
     "jest-preset-angular": "^11.0.1",
     "ng-packagr": "^12.1.1",
     "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
     "typescript": "~4.3.5",
     "zone.js": "~0.11.4"
   }
