Add prerelease script

--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -28,6 +28,7 @@
   "scripts": {
     "ng": "ng",
     "build": "ng build datx-jsonapi-angular",
+    "prepublish": "npm run build",
     "test": "jest"
   },
   "dependencies": {
