--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "typescript.tsdk": "node_modules/typescript/lib",
-  "workbench.colorCustomizations": {}
+  "workbench.colorCustomizations": {},
+  "angular.enable-strict-mode-prompt": false
 }
