--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -35,8 +35,7 @@
     "@datx/core": "2.4.0",
     "@datx/jsonapi": "2.4.0",
     "@datx/network": "2.4.0",
-    "@datx/utils": "2.4.0",
-    "tslib": "^2.3.0"
+    "@datx/utils": "2.4.0"
   },
   "peerDependencies": {
     "@angular/common": ">=12",
@@ -44,24 +43,25 @@
     "rxjs": "6 || 7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.3",
+    "@angular-devkit/build-angular": "~13.2.1",
     "@angular/animations": "~13.2.0",
-    "@angular/cli": "~13.2.0",
+    "@angular/cli": "~13.2.1",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
-    "@angular/compiler-cli": "~12.2.0",
+    "@angular/compiler-cli": "~13.2.0",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.10",
-    "jest": "^27.3.1",
-    "jest-preset-angular": "^11.0.1",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.14",
+    "jest": "^27.4.7",
+    "jest-preset-angular": "^11.1.0",
     "ng-packagr": "^13.2.1",
     "rxjs": "~7.5.2",
-    "typescript": "~4.3.5",
+    "tslib": "^2.3.1",
+    "typescript": "~4.5.5",
     "zone.js": "~0.11.4"
   }
 }
