--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -18,7 +18,7 @@ body:
     attributes:
       label: Library version(s)
       description: Version of the @datx libraries you're using
-      placeholder: @datx/core 2.3.1, @datx/jsonapi 2.3.0
+      placeholder: "@datx/core 2.3.1, @datx/jsonapi 2.3.0"
   - type: textarea
     id: api
     attributes:
