--- a/packages/client-react/package.json
+++ b/packages/client-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/react",
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0-alpha.0",
   "description": "DatX mixin for better React integration",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -60,9 +60,9 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "3.0.0-beta.1",
-    "@datx/network": "3.0.0-beta.1",
-    "@datx/utils": "3.0.0-beta.1"
+    "@datx/core": "3.0.0-alpha.0",
+    "@datx/network": "3.0.0-alpha.0",
+    "@datx/utils": "3.0.0-alpha.0"
   },
   "peerDependencies": {
     "react": "^16.0.0 || ^17.0.1",
