--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/core",
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0-alpha.0",
   "description": "A MobX data store",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -59,6 +59,6 @@
     ]
   },
   "dependencies": {
-    "@datx/utils": "3.0.0-beta.1"
+    "@datx/utils": "3.0.0-alpha.0"
   }
 }
