--- a/packages/network-jsonapi/package.json
+++ b/packages/network-jsonapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi",
-  "version": "3.0.0-beta.1",
+  "version": "3.0.0-alpha.0",
   "description": "DatX mixin for JSON API support",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -71,8 +71,8 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "3.0.0-beta.1",
-    "@datx/network": "3.0.0-beta.1",
-    "@datx/utils": "3.0.0-beta.1"
+    "@datx/core": "3.0.0-alpha.0",
+    "@datx/network": "3.0.0-alpha.0",
+    "@datx/utils": "3.0.0-alpha.0"
   }
 }
