Fix some issues form the PR comments

--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -66,7 +66,7 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
+    "react": "^16.11.0 || >=17.0.0",
     "swr": "^1.1.0"
   }
 }
