--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "lerna": "2.5.1",
-  "packages": ["packages/*", "examples/*"],
+  "packages": ["packages/*"],
   "version": "2.4.2",
   "npmClient": "yarn",
   "useWorkspaces": true,
