--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/swr",
-  "version": "0.0.1",
+  "version": "2.5.0-beta.0",
   "description": "DatX bindings for SWR",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -34,8 +34,8 @@
     "watch": "rollup --config --watch"
   },
   "dependencies": {
-    "@datx/core": "^2.3.2",
-    "@datx/jsonapi": "^2.3.2",
+    "@datx/core": "2.5.0-beta.0",
+    "@datx/jsonapi": "2.5.0-beta.0",
     "lodash": "^4.17.21",
     "memoize-one": "6.0.0"
   },
