--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nextjs",
-  "version": "2.5.0-beta.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "NODE_OPTIONS='--inspect' next dev",
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@datx/swr": "2.5.0-beta.0",
+    "@datx/swr": "^0.0.1",
     "next": "12.0.4",
     "next-api-router": "^1.0.4",
     "react": "17.0.2",
