--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
   "lerna": "2.5.1",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "2.5.0-beta.0",
+  "packages": ["packages/*"],
+  "version": "2.4.2",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
