--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -35,9 +35,7 @@
   },
   "dependencies": {
     "@datx/core": "2.5.0-beta.0",
-    "@datx/jsonapi": "2.5.0-beta.0",
-    "lodash": "^4.17.21",
-    "memoize-one": "6.0.0"
+    "@datx/jsonapi": "2.5.0-beta.0"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.0",
