--- a/examples/nextjs/.eslintrc.json
+++ b/examples/nextjs/.eslintrc.json
@@ -1,4 +1,4 @@
 {
   "root": true,
-  "extends": "@infinumjs/eslint-config-react-ts"
+  "extends": ["@infinumjs/eslint-config-react-ts", "plugin:@next/next/recommended"]
 }
