--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -16,23 +16,23 @@
     "@datx/swr": "^2.5.0-beta.0",
     "@next/bundle-analyzer": "12.1.5",
     "mobx": "6.5.0",
-    "next": "12.0.4",
+    "next": "12.1.5",
     "next-api-router": "^1.0.4",
     "next-compose-plugins": "2.2.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "swr": "^1.1.0",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "swr": "2.0.0-beta.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@infinumjs/eslint-config-react-ts": "^2.9.0",
     "@next/eslint-plugin-next": "12.1.5",
     "@types/node": "16.11.11",
-    "@types/react": "17.0.37",
+    "@types/react": "18.0.5",
     "@types/uuid": "^8.3.3",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "source-map-explorer": "2.5.2",
-    "typescript": "4.5.2"
+    "typescript": "4.6.3"
   }
 }
