--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -41,30 +41,30 @@
     "@rollup/plugin-commonjs": "^21.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@swc-node/jest": "1.4.1",
-    "@testing-library/jest-dom": "5.16.1",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/user-event": "13.5.0",
+    "@swc-node/jest": "1.4.3",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.0.1",
+    "@testing-library/user-event": "14.1.0",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/jest": "^27.0.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^16.0.0",
     "@types/uuid": "^8.3.0",
     "isomorphic-fetch": "3.0.0",
-    "jest": "^27.0.5",
-    "msw": "0.36.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "jest": "^27.5.1",
+    "msw": "0.39.2",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
-    "swr": "^1.1.0",
+    "swr": "2.0.0-beta.0",
     "tslib": "^2.3.0",
     "typescript": "^4.1.3",
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "react": "^16.11.0 || >=17.0.0",
-    "swr": ">=1.1.0"
+    "react": "^16.11.0 || >=17.0.0 || >= 18.0.0",
+    "swr": ">=1.3.0 || >=2.0.0-beta.0"
   }
 }
