WIP mobx removal

--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -60,10 +60,7 @@
       }
     },
     "preset": "ts-jest",
-    "testMatch": null,
-    "setupFilesAfterEnv": [
-      "./test/setup.ts"
-    ]
+    "testMatch": null
   },
   "dependencies": {
     "@datx/core": "2.4.0",
