--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -65,10 +65,7 @@
       }
     },
     "preset": "ts-jest",
-    "testMatch": null,
-    "setupFilesAfterEnv": [
-      "./test/setup.ts"
-    ]
+    "testMatch": null
   },
   "dependencies": {
     "@datx/core": "2.4.0",
