--- a/packages/datx-utils/package.json
+++ b/packages/datx-utils/package.json
@@ -17,8 +17,7 @@
   "author": "Infinum JavaScript Team <hello@infinum.com>",
   "license": "MIT",
   "keywords": [
-    "datx",
-    "mobx"
+    "datx"
   ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.0",
@@ -27,7 +26,6 @@
     "@types/jest": "^27.0.0",
     "@types/node": "^17.0.4",
     "jest": "^27.0.5",
-    "mobx": "^6.0.4",
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
@@ -59,9 +57,6 @@
       }
     },
     "preset": "ts-jest",
-    "testMatch": null,
-    "setupFilesAfterEnv": [
-      "./test/setup.ts"
-    ]
+    "testMatch": null
   }
 }
