--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@datx/core",
   "version": "2.4.0",
-  "description": "A MobX data store",
+  "description": "An opinionated data store",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "typings": "dist/index.d.ts",
