--- a/lerna.json
+++ b/lerna.json
@@ -3,7 +3,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "2.4.2",
+  "version": "3.0.0-beta.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
