--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi",
-  "version": "2.4.0",
+  "version": "3.0.0-beta.0",
   "description": "DatX mixin for JSON API support",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -67,8 +67,8 @@
     "testMatch": null
   },
   "dependencies": {
-    "@datx/core": "2.4.0",
-    "@datx/network": "2.4.0",
-    "@datx/utils": "2.4.0"
+    "@datx/core": "3.0.0-beta.0",
+    "@datx/network": "3.0.0-beta.0",
+    "@datx/utils": "3.0.0-beta.0"
   }
 }
