--- a/packages/datx-network/package.json
+++ b/packages/datx-network/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/network",
-  "version": "2.4.0",
+  "version": "3.0.0-beta.0",
   "description": "DatX network layer",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -62,7 +62,7 @@
     "testMatch": null
   },
   "dependencies": {
-    "@datx/core": "2.4.0",
-    "@datx/utils": "2.4.0"
+    "@datx/core": "3.0.0-beta.0",
+    "@datx/utils": "3.0.0-beta.0"
   }
 }
