--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/core",
-  "version": "2.4.0",
+  "version": "3.0.0-beta.0",
   "description": "An opinionated data store",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -56,6 +56,6 @@
     "testMatch": null
   },
   "dependencies": {
-    "@datx/utils": "2.4.0"
+    "@datx/utils": "3.0.0-beta.0"
   }
 }
