--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -64,7 +64,7 @@
     "uuid": "^8.3.2"
   },
   "peerDependencies": {
-    "react": "^16.11.0 || >=17.0.0 || >= 18.0.0",
-    "swr": ">=1.3.0 || >=2.0.0-beta.0"
+    "react": "^16.11.0 || ^17.0.0 || ^18.0.0",
+    "swr": "^1.3.0 || ^2.0.0-beta.0"
   }
 }
