--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -33,7 +33,7 @@
     "mobx": "^4.2.0 || ^5.5.0"
   },
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest --verbose -t 'should add references form the snapshot'",
     "watch": "jest --watch --coverage",
     "benchmark": "jest benchmark",
     "benchmark-watch": "jest benchmark --watch",
