Update SWR version

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "precommit": "npm run lint & lerna run test",
     "lint": "eslint packages/**/*.ts",
     "test": "lerna run test",
+    "test:swr": "lerna run test --scope @datx/swr",
     "bootstrap": "lerna bootstrap",
     "build": "lerna run build --no-private",
     "watch": "lerna run watch --no-private",
