--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -37,8 +37,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "ts-jest": "^28.0.4",
     "tslib": "~2.4.0",
-    "typescript": "~4.7.3",
-    "uuid": "^8.3.2"
+    "typescript": "~4.7.3"
   },
   "scripts": {
     "test": "jest --coverage",
