--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -23,22 +23,21 @@
   ],
   "devDependencies": {
     "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "@rollup/plugin-typescript": "^8.2.1",
-    "@types/jest": "^27.0.0",
-    "@types/lodash": "^4.14.168",
-    "@types/node": "^17.0.4",
-    "@types/uuid": "^8.3.0",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.2",
+    "@types/jest": "^28.1.1",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.41",
+    "@types/uuid": "^8.3.4",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^27.0.5",
-    "lodash": "^4.17.20",
-    "rollup": "^2.38.0",
-    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
+    "jest": "^28.1.1",
+    "lodash": "^4.17.21",
+    "rollup": "^2.75.6",
+    "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
     "rollup-plugin-terser": "^7.0.2",
-    "ts-jest": "^27.0.3",
+    "ts-jest": "^28.0.4",
     "tslib": "~2.4.0",
-    "typescript": "~4.6.3",
-    "uuid": "^8.3.2"
+    "typescript": "~4.7.3"
   },
   "scripts": {
     "test": "jest --coverage",
