Tweak the GA builds

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,5 +16,7 @@ jobs:
 
       - name: Install & run
         run: |
+          corepack enable
+          yarn init -2
           yarn
           yarn lint --quiet
