--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,13 @@ typings/
 # Optional npm cache directory
 .npm
 .yarn
+.yarn/*
+!.yarn/patches
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
 
 # Optional eslint cache
 .eslintcache
