--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "build": "ng build datx-jsonapi-angular",
+    "build": "ng build datx-jsonapi-angular && npm run copy-license && npm run copy-readme",
+    "copy-license": "cp ./LICENSE ./dist/LICENSE",
+    "copy-readme": "cp ./README.md ./dist/README.md",
     "prepublish": "npm run build",
     "test": "jest"
   },
