--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -16,17 +16,17 @@
   "author": "Infinum JavaScript Team <hello@infinum.com>",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.0",
+    "@rollup/plugin-commonjs": "^22.0.1",
     "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.2",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.41",
-    "jest": "^28.1.1",
-    "rollup": "^2.75.6",
+    "@rollup/plugin-typescript": "^8.3.3",
+    "@types/jest": "^28.1.4",
+    "@types/node": "^18.0.1",
+    "jest": "^28.1.2",
+    "rollup": "^2.75.7",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
-    "ts-jest": "^28.0.4",
+    "ts-jest": "^28.0.5",
     "tslib": "~2.4.0",
-    "typescript": "~4.7.3"
+    "typescript": "~4.7.4"
   },
   "scripts": {
     "test": "jest --coverage",
@@ -57,5 +57,8 @@
     "setupFilesAfterEnv": [
       "./test/setup.ts"
     ]
+  },
+  "dependencies": {
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
