--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -12,27 +12,27 @@
   },
   "dependencies": {
     "@datx/core": "^2.5.0-beta.0",
-    "@datx/jsonapi": "^2.5.0-beta.0",
-    "@datx/swr": "^2.5.0-beta.0",
-    "@next/bundle-analyzer": "12.1.5",
-    "mobx": "6.5.0",
-    "next": "12.1.5",
+    "@datx/jsonapi": "^2.5.0-beta.1",
+    "@datx/swr": "^2.5.0-beta.3",
+    "@next/bundle-analyzer": "^12.2.2",
+    "mobx": "^6.6.0",
+    "next": "^12.2.2",
     "next-api-router": "^1.0.4",
     "next-compose-plugins": "2.2.1",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "swr": "2.0.0-beta.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "swr": "2.0.0-beta.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@infinumjs/eslint-config-react-ts": "^2.9.0",
     "@next/eslint-plugin-next": "12.1.5",
-    "@types/node": "16.11.11",
-    "@types/react": "18.0.5",
-    "@types/uuid": "^8.3.3",
-    "eslint": "7.32.0",
+    "@types/node": "^17.0.41",
+    "@types/react": "^18.0.12",
+    "@types/uuid": "^8.3.4",
+    "eslint": "^8.17.0",
     "eslint-config-next": "12.0.4",
     "source-map-explorer": "2.5.2",
-    "typescript": "4.6.3"
+    "typescript": "~4.7.3"
   }
 }
