--- a/packages/swr/package.json
+++ b/packages/swr/package.json
@@ -55,12 +55,12 @@
     "jest": "28.1.2",
     "jest-environment-jsdom": "28.1.2",
     "msw": "0.39.2",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rollup": "^2.38.0",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.17",
     "rollup-plugin-terser": "^7.0.2",
-    "swr": "2.0.0-beta.3",
+    "swr": "2.0.0-beta.6",
     "tslib": "^2.3.0",
     "typescript": "^4.6.3",
     "uuid": "^8.3.2"
