Fix build issues

--- a/packages/datx/tsconfig.disable-mobx.json
+++ b/packages/datx/tsconfig.disable-mobx.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "inlineSources": false,
     "sourceMap": false,
-    "outDir": "./dist"
+    "declaration": false,
+    "outDir": "."
   }
 }
