--- a/packages/datx/tsconfig.build.json
+++ b/packages/datx/tsconfig.build.json
@@ -17,8 +17,7 @@
     "outDir": ".",
     "strict": true,
     "strictFunctionTypes": false,
-    "target": "es5",
-    "esModuleInterop": true
+    "target": "es5"
   },
   "exclude": ["node_modules", "examples"],
   "include": ["src/**/*"]
