Disable cli analytics

--- a/packages/datx-jsonapi-angular/angular.json
+++ b/packages/datx-jsonapi-angular/angular.json
@@ -27,5 +27,8 @@
       }
     }
   },
-  "defaultProject": "datx-jsonapi-angular"
+  "defaultProject": "datx-jsonapi-angular",
+  "cli": {
+    "analytics": false
+  }
 }
