fix: rebuild yarn.lock to resolve yarn install issue

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "precommit": "npm run lint & lerna run test",
     "lint": "eslint packages/**/*.ts",
+    "postinstall": "npm run prepare",
     "prepare": "husky install"
   },
   "private": true,
