--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
     "@typescript-eslint/interface-name-prefix": 0,
     "@typescript-eslint/no-unused-vars": ["error", { "argsIgnorePattern": "^_" }],
     "@typescript-eslint/explicit-member-accessibility": 1,
-    "no-underscore-dangle": 1
+    "no-underscore-dangle": 1,
+    "prefer-spread": 0
   },
   "parserOptions": {
     "project": ["./packages/datx/tsconfig.json"]
