--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -16,17 +16,22 @@
   "author": "Infinum JavaScript Team <hello@infinum.com>",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.3",
-    "@types/jest": "^28.1.4",
-    "@types/node": "^18.0.1",
-    "jest": "^28.1.2",
-    "rollup": "^2.75.7",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
+    "@types/jest": "^29.2.0",
+    "@types/node": "^18.11.7",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
+    "rollup": "^3.2.3",
     "rollup-plugin-exclude-dependencies-from-bundle": "^1.1.22",
-    "ts-jest": "^28.0.5",
+    "rollup-plugin-terser": "^7.0.2",
+    "ts-jest": "^29.0.3",
     "tslib": "~2.4.0",
-    "typescript": "~4.7.4"
+    "typescript": "~4.8.4"
+  },
+  "dependencies": {
+    "type-fest": "^3.1.0"
   },
   "scripts": {
     "test": "jest --coverage",
@@ -45,21 +50,20 @@
     ],
     "testEnvironment": "jsdom",
     "testRegex": "(.*).test.ts$",
-    "globals": {
-      "ts-jest": {
-        "diagnostics": {
-          "warnOnly": true
+    "transform": {
+      "(.*).test.ts$": [
+        "ts-jest",
+        {
+          "diagnostics": {
+            "warnOnly": true
+          }
         }
-      }
+      ]
     },
     "preset": "ts-jest",
     "testMatch": null,
     "setupFilesAfterEnv": [
       "./test/setup.ts"
     ]
-  },
-  "dependencies": {
-    "jest-environment-jsdom": "^28.1.2",
-    "rollup-plugin-terser": "^7.0.2"
   }
 }
