--- a/packages/datx/tsconfig.build.json
+++ b/packages/datx/tsconfig.build.json
@@ -9,7 +9,7 @@
     "forceConsistentCasingInFileNames": true,
     "sourceMap": true,
     "inlineSources": true,
-    "lib": ["es2015", "es2016", "es2017", "es2018", "es2019"],
+    "lib": [],
     "module": "esnext",
     "noImplicitAny": false,
     "noImplicitReturns": true,
