--- a/packages/datx/tsconfig.json
+++ b/packages/datx/tsconfig.json
@@ -5,6 +5,6 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "noUnusedLocals": true,
-    "outDir": "./dist"
+    "allowJs": true
   }
 }
