--- a/packages/datx/package.json
+++ b/packages/datx/package.json
@@ -37,7 +37,7 @@
     "test": "jest --coverage",
     "watch": "jest --watch --coverage",
     "prepublish": "npm run build",
-    "build": "rollup -c"
+    "build": "rollup -c --compact --bundleConfigAsCjs"
   },
   "jest": {
     "coveragePathIgnorePatterns": [
