--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,5 +16,6 @@ jobs:
 
       - name: Install & run
         run: |
+          yarn set version 3.2.1
           yarn
           yarn lint --quiet
