--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,6 +28,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm install -g lerna
+      - run: yarn set version 3.2.1
       - run: yarn
       - run: lerna bootstrap
       - name: Cleanup MobX
