--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,7 @@
 {
   "lerna": "2.5.1",
-  "packages": [
-    "packages/*"
-  ],
-  "version": "2.4.6",
+  "packages": ["packages/*"],
+  "version": "2.4.7-alpha.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "publishConfig": {
