--- a/packages/datx-jsonapi/package.json
+++ b/packages/datx-jsonapi/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@datx/jsonapi",
-  "version": "2.4.6",
+  "version": "2.4.7-alpha.0",
   "description": "DatX mixin for JSON API support",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -73,8 +73,8 @@
     ]
   },
   "dependencies": {
-    "@datx/core": "2.4.6",
-    "@datx/network": "2.4.6",
-    "@datx/utils": "2.4.5"
+    "@datx/core": "2.4.7-alpha.0",
+    "@datx/network": "2.4.7-alpha.0",
+    "@datx/utils": "2.4.7-alpha.0"
   }
 }
