Handle Angular dist versions

--- a/packages/datx-jsonapi-angular/package.json
+++ b/packages/datx-jsonapi-angular/package.json
@@ -6,7 +6,7 @@
     "build": "ng build datx-jsonapi-angular && npm run copy-license && npm run copy-readme",
     "copy-license": "cp ./LICENSE ./dist/LICENSE",
     "copy-readme": "cp ./README.md ./dist/README.md",
-    "prepublish": "npm run build",
+    "prepublish": "npm run build && node ./prepublish.js",
     "test": "jest",
     "ts:check": "tsc --noEmit"
   },
