Fix mobx install

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,6 @@ jobs:
         run: yarn workspace @datx/utils remove mobx
       - name: Install correct MobX version
         if: ${{ matrix.mobx-version > 0 }}
-        run: cd packages/datx-utils; yarn add mobx@${{ matrix.mobx-version }} --dev
+        run: yarn workspace @datx/utils add mobx@${{ matrix.mobx-version }} -D
       - run: yarn build
       - run: MOBX_VERSION=${{ matrix.mobx-version }} yarn test
