--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
       "./packages/datx-jsonapi-angular/tsconfig.json",
       "./packages/datx-network/tsconfig.json",
       "./packages/datx-swr/tsconfig.json",
-      "./packages/datx-utils/tsconfig.json"
+      "./packages/datx-utils/tsconfig.json",
+      "./packages/datx-test-data-factory/tsconfig.json"
     ]
   }
 }
